tests/fixtures/invalid/bool_add_bytes.py
# Cannot add Bool and Bytes
x: bool = True + b"hello"
